cmake_minimum_required(VERSION 3.13)
project(reading_notes)

set(CMAKE_CXX_STANDARD 11)

add_executable(reading_notes cpp_primer_5/chap_1/1_1.cpp cpp_primer_5/chap_1/1_2.cpp cpp_primer_5/chap_1/1_3.cpp cpp_primer_5/chap_1/1_4.cpp cpp_primer_5/chap_1/1_5.cpp cpp_primer_5/chap_1/1_6.cpp cpp_primer_5/chap_1/1_7.cpp)
